# jupyterlab-codex

./: .gitignore  README.md  install.json  package.json  pyproject.toml  tsconfig.json
jupyter-config/server-config/: jupyter_codex.json  jupyterlab_codex.json
jupyter_codex/: __init__.py
jupyterlab_codex/: __init__.py  handlers.py
schema/: plugin.json
src/: icon.ts  index.ts  kernelRpc.ts  widget.ts
src/agent/: client.ts  codexAuth.ts  codexProvider.ts  frontendTools.ts  markdown.ts  proxyUrl.ts  toolRunner.ts  tools.ts  transcriptStore.ts
style/: base.css
