[build-system]
requires = ["hatchling>=1.5.0", "jupyterlab>=4.0.0,<5", "hatch-nodejs-version>=0.3.2"]
build-backend = "hatchling.build"

[project]
name = "jupyterlab_codex"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "jupyterlab-codex contributors" }]
keywords = ["Jupyter", "JupyterLab", "JupyterLab4", "OpenAI", "Codex", "ChatGPT"]
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
# jupyter_server is required for the bundled proxy routes
# (/codex/responses, /codex/device/*, /codex/refresh). It's a
# transitive dep of jupyterlab itself, so this almost never adds a
# new wheel install in practice.
dependencies = ["jupyter_server>=2.0.1,<3"]
dynamic = ["version", "description", "urls"]

[project.optional-dependencies]
dev = [
    "build",
    "jupyterlab>=4.0.0,<5",
]

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
path = "package.json"

[tool.hatch.build.targets.wheel]
packages = ["jupyterlab_codex"]

[tool.hatch.build.targets.wheel.shared-data]
"jupyterlab_codex/labextension" = "share/jupyter/labextensions/jupyterlab-codex"
"install.json" = "share/jupyter/labextensions/jupyterlab-codex/install.json"
"jupyter-config/server-config" = "etc/jupyter/jupyter_server_config.d"

[tool.hatch.build.targets.sdist]
exclude = [".github", ".yarn", "node_modules"]

[tool.hatch.build.hooks.version]
path = "jupyterlab_codex/_version.py"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "jupyterlab_codex/labextension/static/style.js",
    "jupyterlab_codex/labextension/package.json",
]
skip-if-exists = ["jupyterlab_codex/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "jupyterlab_codex/labextension"
