[build-system]
requires = ["hatchling>=1.5.0", "jupyterlab>=4.0.0,<5", "hatch-nodejs-version>=0.3.2"]
build-backend = "hatchling.build"

[project]
name = "jupyter_codex"
description = "JupyterLab extension that opens an OpenAI Codex chat in the left sidebar."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "jupyter-codex contributors" }]
keywords = ["Jupyter", "JupyterLab", "JupyterLab4", "JupyterLite", "OpenAI", "Codex", "ChatGPT"]
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
# jupyter_server is required for the bundled proxy routes
# (/codex/responses, /codex/device/*, /codex/refresh). It's a
# transitive dep of jupyterlab itself, so this almost never adds a
# new wheel install in practice.
dependencies = ["jupyter_server>=2.0.1,<3"]
# Only version is dynamic — read from package.json so npm and PyPI
# versions can never drift. name/description/urls are static here so
# the metadata hook can't override `name = "jupyter_codex"` with the
# npm package name (which stays as "jupyterlab-codex" by JupyterLab
# convention).
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/yanndebray/jupyterlab-codex"
"Bug Tracker" = "https://github.com/yanndebray/jupyterlab-codex/issues"
Repository = "https://github.com/yanndebray/jupyterlab-codex.git"

[project.optional-dependencies]
dev = [
    "build",
    "jupyterlab>=4.0.0,<5",
]

[tool.hatch.version]
source = "nodejs"

[tool.hatch.build.targets.wheel]
packages = ["jupyter_codex"]

[tool.hatch.build.targets.wheel.shared-data]
"jupyter_codex/labextension" = "share/jupyter/labextensions/jupyterlab-codex"
"install.json" = "share/jupyter/labextensions/jupyterlab-codex/install.json"
"jupyter-config/server-config" = "etc/jupyter/jupyter_server_config.d"

[tool.hatch.build.targets.sdist]
exclude = [".github", ".yarn", "node_modules"]

[tool.hatch.build.hooks.version]
path = "jupyter_codex/_version.py"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "jupyter_codex/labextension/static/style.js",
    "jupyter_codex/labextension/package.json",
]
skip-if-exists = ["jupyter_codex/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "jupyter_codex/labextension"
